--- a/docker/nano-foxy/Dockerfile.template
+++ b/docker/nano-foxy/Dockerfile.template
@@ -86,12 +86,36 @@ RUN pip3 install numpy
 RUN echo %%BALENA_MACHINE_NAME%%
 
 #realsense stuff
-RUN echo 'deb http://realsense-hw-public.s3.amazonaws.com/Debian/apt-repo xenial main' || tee /etc/apt/sources.list.d/realsense-public.list
-RUN apt-key adv --keyserver keys.gnupg.net --recv-key C8B3A55A6F3EFCDE || apt-key adv --keyserver hkp://keys.gnupg.net:80 --recv-key C8B3A55A6F3EFCDE
-RUN add-apt-repository "deb http://realsense-hw-public.s3.amazonaws.com/Debian/apt-repo xenial main"
-RUN apt-get update -qq
-RUN apt-get install librealsense2-dkms --allow-unauthenticated -y
-RUN apt-get install librealsense2-dev --allow-unauthenticated -y
+# preparations
+RUN export REALSENSE_SOURCE_DIR=$HOME/projects/librealsense/
+RUN apt-get install guvcview git libssl-dev libusb-1.0-0-dev pkg-config libgtk-3-dev -y
+RUN apt-get install libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev -y
+RUN git clone https://github.com/IntelRealSense/librealsense.git $REALSENSE_SOURCE_DIR
+RUN mkdir $REALSENSE_SOURCE_DIR/build
+RUN cd $REALSENSE_SOURCE_DIR/build
+
+# build
+RUN export REALSENSE_INSTALL_PREFIX=/opt/realsense
+#here we are 
+RUN mkdir -p /opt/realsense
+RUN chown $USER:$USER -R /opt/realsense 
+#above not relay needed -> you could run _make_ followed by _sudo make install_
+RUN ls
+WORKDIR /librealsense/build
+
+RUN cmake ../ -DFORCE_RSUSB_BACKEND=true -DBUILD_PYTHON_BINDINGS=false -DCMAKE_BUILD_TYPE=release -DBUILD_EXAMPLES=true -DBUILD_GRAPHICAL_EXAMPLES=true -DCMAKE_INSTALL_PREFIX=$REALSENSE_INSTALL_PREFIX
+RUN make install
+
+# extend the ld search path
+RUN sh -c "echo $REALSENSE_INSTALL_PREFIX/lib > /etc/ld.so.conf.d/realsense.conf"
+RUN ldconfig
+
+# udev rules
+RUN cd ~/projects/librealsense/
+RUN cp config/99-realsense-libusb.rules /etc/udev/rules.d/99-realsense-libusb.rules && sudo udevadm control --reload-rules && udevadm trigger
+
+# make cmake config avaliable
+RUN echo "export realsense2_DIR=/opt/realsense/lib/cmake/realsense2" >> ~/.bashrc
 
 RUN git clone https://github.com/BraedenCu/nanoVision.git
 
